---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2021.06.05
  Changes:
    - Fuel value of Fuel updated
  Bugfixes:
    - Crash in the Zipline
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2021.06.11
  Features:
    - Added GUI to Power Storage
  Bugfixes:
    - Fix crash when trying to fast-transfer from a tree
    - Rails now work properly in the Build Gun
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021.06.12
  Changes:
    - Added UI to better show flight time of the Jetpack
  Bugfixes:
    - Fixed price of Rifle Ammo in AWESOME shop
    - Fixed incorrect icons for resource wells
    - Fixed that Water Extractors did not show on the map
    - Fixed map colour of Splitters/Mergers
    - Fixed Alt Recipe selection screen not showing byproducts properly
    - Fixed that Loader Conveyors were destructible (mostly by Nobelisk explosion)
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021.06.13
  Changes:
    - Increased stack size of all Buildings so that the Build Gun can better show affordable amount
    - Added "Scanner" icon to resource/object scan "recipe" icons
    - Added custom icons for "nothing"-type technology effects
  Bugfixes:
    - Fixed incorrect locale for capsule item tooltips
    - More locale fixes
    - Fixed cost of underground belts/pipes (was double what it should have been)
    - Fix that, in the rare case Foundation snaps to clip into another Foundation, both would be immovable
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: ????
  Ease of use:
    - Tabs for composite entities (Truck Station, Drone Port) now disable themselves if you are out of range of that component